Add reference to newly added feature highlight

--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -9,7 +9,7 @@ comments: false
 
 ---
 
-We're happy to share with all of you Pencil2D's most recent release. This time our top priority was fixing the most immediate and pressing issues that not only broke the animation experience but also to patch previously implemented features. **Over 330+ individual commits** has been added since the last release, to stabilize and improve the software for continued use.
+We're happy to share with all of you Pencil2D's most recent release. This time our top priority was fixing the most immediate and pressing issues that not only broke the animation experience but also to patch previously implemented features. **Over 390+ individual commits** has been added since the last release, to stabilize and improve the software for continued use.
 
 <center><h1><a href="https://www.pencil2d.org/download">Download Pencil2D v0.6.7 Now!</a></h1></center>
 
@@ -83,7 +83,7 @@ Add gif or video of feature
 + What's removed
   + Ability to easily swap frames when dragging, eg. the old functionality.
 
-#### Selection/Move tool improvements
+#### Selection/Move tool improvements [#1724](https://github.com/pencil2d/pencil/pull/1724)
 
 It's been on our TODO list for a long time but this release is finally where we got around to fix one obnoxious problem about the move tool. The fact that when you rotate a selection, the selection visual itself doesn't change. Fixing this problem however required reworking a lot of the selection logic but doing so also allowed us to fix a bunch of other annoying bugs, while also being able to improve the user experience.
 
