Fix contributors were not shown visually
This was also the case for the previous release :3

--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -36,6 +36,8 @@ Many thanks to all the people who helped to make this release possible.
 [donarturo11]: https://github.com/donarturo11
 [anpanring]: https://github.com/anpanring
 
+[Chchwy] - [Scribblemaniac] - [MrStevns] - [Davidlamhauge] - [Josemoreno] - [J5lx] - [iynaur] - [aeroc7] - [v404] - [donarturo11] - [anpanring]
+
 ## 0.6.7 Release Notes & Highlights
 
 ### Feature highlights
