Add comma between PR mentions

--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -42,7 +42,7 @@ Many thanks to all the people who helped to make this release possible.
 
 ### Feature highlights
 
-### Layer / Keyframe opacity - [#1355](https://github.com/pencil2d/pencil/pull/1355)[459](https://github.com/pencil2d/pencil/issues/459)
+### Layer / Keyframe opacity - [#1355](https://github.com/pencil2d/pencil/pull/1355), [459](https://github.com/pencil2d/pencil/issues/459)
 
 
 #### Rewritten camera system [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587), [#1732](https://github.com/pencil2d/pencil/pull/1732), [#1738](https://github.com/pencil2d/pencil/pull/1738)
@@ -150,13 +150,13 @@ Add gif or video of feature
 
 + Crash when undoing after layer deletion - [#1412](https://github.com/pencil2d/pencil/issues/1412)
 + Fixed UI rendering issue when using Direct2D on Windows - [#1575](https://github.com/pencil2d/pencil/pull/1575)
-+ Fixed canvas rendering bugs - [#1642](https://github.com/pencil2d/pencil/pull/1642) [#1581](https://github.com/pencil2d/pencil/pull/1581) [#1580](https://github.com/pencil2d/pencil/pull/1580) [#1577](https://github.com/pencil2d/pencil/pull/1577) [#1576](https://github.com/pencil2d/pencil/issues/1576)
++ Fixed canvas rendering bugs - [#1642](https://github.com/pencil2d/pencil/pull/1642) [#1581], (https://github.com/pencil2d/pencil/pull/1581), [#1580](https://github.com/pencil2d/pencil/pull/1580), [#1577](https://github.com/pencil2d/pencil/pull/1577), [#1576](https://github.com/pencil2d/pencil/issues/1576)
 + Fixed a case where a keyframe undo would lead to a crash or double undo - [#1629](https://github.com/pencil2d/pencil/pull/1629)
 + Fixed an issue that caused the hand tool icon to remain active after zooming with a stylus - [#1633](https://github.com/pencil2d/pencil/pull/1633)
 + Fixed an issue where transforming areas in certain imported footage would color them black - [#1642](https://github.com/pencil2d/pencil/pull/1642)
 + Fixed an issue that caused fill operations to be performed twice when performed with a tablet - [#1667](https://github.com/pencil2d/pencil/pull/1667)
 + Fixed an issue that caused Pencil2D to detect the system language incorrecty on systems that have secondary languages configured - [#1703](https://github.com/pencil2d/pencil/pull/1703)
-+ Fixed mouse wheel zoom misbehaviour on Linux - [#1716](https://github.com/pencil2d/pencil/pull/1716) [#1711](https://github.com/pencil2d/pencil/issues/1711)
++ Fixed mouse wheel zoom misbehaviour on Linux - [#1716](https://github.com/pencil2d/pencil/pull/1716), [#1711](https://github.com/pencil2d/pencil/issues/1711)
 + Fixed an issue that caused undo information to be recorded improperly for the first change made after navigating between frames - [#1717](https://github.com/pencil2d/pencil/pull/1717)
 + Fixed an issue that allowed the project recovery dialog to appear behind the main window - [#1721](https://github.com/pencil2d/pencil/pull/1265)
 + Fixed rotated selections boundaries not being properly visualised - [#1724](https://github.com/pencil2d/pencil/pull/1724)
