Update main announcement description

--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -9,7 +9,9 @@ comments: false
 
 ---
 
-We're happy to share with all of you Pencil2D's most recent release. This time our top priority was fixing the most immediate and pressing issues that not only broke the animation experience but also to patch previously implemented features. **Over 390+ individual commits** has been added since the last release, to stabilize and improve the software for continued use.
+It's been long overdue... but here it is! Pencil2D release 0.6.7
+
+We've been working on this release for more than 2 years, a release which packs **390+ commits**, and boy do we have things to show! A much awaited re-designed camera system, Timeline dragging and exposure improvements, Adjustable layer opacity, Repositioning content of multiple frames, Perspective grids and more.
 
 <center><h1><a href="https://www.pencil2d.org/download">Download Pencil2D v0.6.7 Now!</a></h1></center>
 
@@ -42,14 +44,14 @@ Many thanks to all the people who helped to make this release possible.
 
 ### Feature highlights
 
-### Layer / Keyframe opacity - [#1355](https://github.com/pencil2d/pencil/pull/1355), [459](https://github.com/pencil2d/pencil/issues/459)
+### Adjustable Layer/Keyframe opacity - [#1355](https://github.com/pencil2d/pencil/pull/1355), [459](https://github.com/pencil2d/pencil/issues/459)
 
 
-#### Rewritten camera system [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587), [#1732](https://github.com/pencil2d/pencil/pull/1732), [#1738](https://github.com/pencil2d/pencil/pull/1738)
+#### A re-designed camera system [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587), [#1732](https://github.com/pencil2d/pencil/pull/1732), [#1738](https://github.com/pencil2d/pencil/pull/1738)
 
 Add gif or video of feature
 
-#### Enable ability to reposition canvas content for selected keyframes - [#1325](https://github.com/pencil2d/pencil/pull/1325)
+#### Reposition content of multiple frames - [#1325](https://github.com/pencil2d/pencil/pull/1325)
 Write details about feature ...
 
 #### Timeline UI/UX - Exposure features [#1343](https://github.com/pencil2d/pencil/pull/1343)
