--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -40,21 +40,19 @@ Many thanks to all the people who helped to make this release possible.
 
 [Chchwy] - [Scribblemaniac] - [MrStevns] - [Davidlamhauge] - [Josemoreno] - [J5lx] - [iynaur] - [aeroc7] - [v404] - [donarturo11] - [anpanring]
 
-## 0.6.7 Release Notes & Highlights
-
-### Feature highlights
+_______________________________________________
+## Feature highlights
 
 ### Adjustable Layer/Keyframe opacity - [#1355](https://github.com/pencil2d/pencil/pull/1355), [#459](https://github.com/pencil2d/pencil/issues/459)
 
-
-#### A re-designed camera system [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587), [#1732](https://github.com/pencil2d/pencil/pull/1732), [#1738](https://github.com/pencil2d/pencil/pull/1738)
+### A re-designed camera system [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587), [#1732](https://github.com/pencil2d/pencil/pull/1732), [#1738](https://github.com/pencil2d/pencil/pull/1738)
 
 Add gif or video of feature
 
-#### Reposition content of multiple frames - [#1325](https://github.com/pencil2d/pencil/pull/1325)
+### Reposition content of multiple frames - [#1325](https://github.com/pencil2d/pencil/pull/1325)
 Write details about feature ...
 
-#### Timeline UI/UX - Exposure features [#1343](https://github.com/pencil2d/pencil/pull/1343)
+### Timeline UI/UX - Exposure features [#1343](https://github.com/pencil2d/pencil/pull/1343)
 
 Add gif or video of feature
 
@@ -76,7 +74,7 @@ Changes:
 + Reverse selection of frames.
   + Shortcuts: None as default but can be set.
 
-#### Timeline UI/UX - Non destructive dragging [#1495](https://github.com/pencil2d/pencil/pull/1495)
+### Timeline UI/UX - Non destructive dragging [#1495](https://github.com/pencil2d/pencil/pull/1495)
 
 Add gif or video of feature
 
@@ -87,7 +85,7 @@ Add gif or video of feature
 + What's removed
   + Ability to easily swap frames when dragging, eg. the old functionality.
 
-#### Selection/Move tool improvements [#1724](https://github.com/pencil2d/pencil/pull/1724)
+### Selection/Move tool improvements [#1724](https://github.com/pencil2d/pencil/pull/1724)
 
 It's been on our TODO list for a long time but this release is finally where we got around to fix one obnoxious problem about the move tool. The fact that when you rotate a selection, the selection visual itself doesn't change. Fixing this problem however required reworking a lot of the selection logic but doing so also allowed us to fix a bunch of other annoying bugs, while also being able to improve the user experience.
 
@@ -106,13 +104,13 @@ Now because of the reworked logic, this is no longer neccesary and we can instea
 
 In addition to that every transform will also now be undo'able.
 
-#### Perspective grids! [#1352](https://github.com/pencil2d/pencil/pull/1352)
+### Perspective grids! [#1352](https://github.com/pencil2d/pencil/pull/1352)
 
 Add gif or video of feature
 
-
-### Enhancements/Changes
-#### Interface: 
+_________________________________________
+## Enhancements/Changes
+### Interface: 
 + The zoom control on the status bar is now interactive - [#1442](https://github.com/pencil2d/pencil/pull/1442)
 + Help text for the currently active tool has been added to the status bar - [#1442](https://github.com/pencil2d/pencil/pull/1442)
 + Added toolbars for commonly used actions - [#1468](https://github.com/pencil2d/pencil/pull/1468)
@@ -127,7 +125,7 @@ Add gif or video of feature
 + Improved error messages when importing images - [#1750](https://github.com/pencil2d/pencil/pull/1750)
 
 
-#### Bucket tool:
+### Bucket tool:
 
 + Ability to fill to the layer below - [#1630](https://github.com/pencil2d/pencil/pull/1630)
 + Ability to set the fill reference layer - [#1630](https://github.com/pencil2d/pencil/pull/1630)
@@ -137,7 +135,7 @@ Add gif or video of feature
 + **Significantly** improved fill performance [#1707](https://github.com/pencil2d/pencil/pull/1707)
 + Ability to fill using a blend mode: Overlay/Behind/Replace - [#1590](https://github.com/pencil2d/pencil/pull/1590)
 
-#### Workflow improvements
+### Workflow improvements
 + Vector stroke colors will now only be updated when the palette replace function is used - [#1265](https://github.com/pencil2d/pencil/pull/1265)
 + Ability to paste content from the previous frame - [#1682](https://github.com/pencil2d/pencil/pull/1682)
 + Ability to duplicate layer - [#1690](https://github.com/pencil2d/pencil/pull/1690), [#1744](https://github.com/pencil2d/pencil/pull/1744)
