Update with hidden soundlayer bugfix

--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -174,6 +174,7 @@ _________________________________________
 + Fixed an issue where opening Unicode file paths failed when compiled against MinGW32 - [eefd148](https://github.com/pencil2d/pencil/commit/eefd14824efa3689eb2443222ee22287240bc61b)
 + Fixed sound sometimes not exporting when range start > 1 [e9f72dc](https://github.com/pencil2d/pencil/commit/e9f72dcc468eb9887a8ed332be6d58ffbde473a4)
 + Fixed various memory leaks
++ Fixed hidden sound layers should be ignored in export [b315f27](https://github.com/pencil2d/pencil/commit/b315f27e2016ce779782ead4889205fe1ef6913c)
 
 
 ### Various
