--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -127,7 +127,6 @@ _________________________________________
 
 ### Bucket tool:
 
-+ Ability to fill to the layer below - [#1630](https://github.com/pencil2d/pencil/pull/1630)
 + Ability to set the fill reference layer - [#1630](https://github.com/pencil2d/pencil/pull/1630)
 + Ability to toggle tolerance on/off - [#1630](https://github.com/pencil2d/pencil/pull/1630)
 + Ability to expand the fill area - [#1630](https://github.com/pencil2d/pencil/pull/1630)
@@ -144,6 +143,8 @@ _________________________________________
 ### Behind the curtain
 + Optimized visual updates of the timeline window - [#1737](https://github.com/pencil2d/pencil/pull/1737)
 + Faster rendering - [#1761](https://github.com/pencil2d/pencil/pull/1761)
++ Painting performance improvements - Tiled buffer [#1776](https://github.com/pencil2d/pencil/pull/1776)
+
 + Switching tools temporarily through modifier keys or right-clicking has been reworked to be more reliable - [#1675](https://github.com/pencil2d/pencil/pull/1675)
 
 ### Bugfixes
@@ -175,6 +176,8 @@ _________________________________________
 + Fixed sound sometimes not exporting when range start > 1 [e9f72dc](https://github.com/pencil2d/pencil/commit/e9f72dcc468eb9887a8ed332be6d58ffbde473a4)
 + Fixed various memory leaks
 + Fixed hidden sound layers should be ignored in export [b315f27](https://github.com/pencil2d/pencil/commit/b315f27e2016ce779782ead4889205fe1ef6913c)
++ Buckettool fill bugs [#1772](https://github.com/pencil2d/pencil/pull/1772)
++ Add custom Windows tile for Windows 10 [#1787](https://github.com/pencil2d/pencil/pull/1787)
 
 
 ### Various
