Update changelog with recent PRs

--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -110,11 +110,12 @@ Add gif or video of feature
 
 _________________________________________
 ## Enhancements/Changes
-### Interface: 
+### Interface:
++ Introduced a comprehensive new icon set - [#1356](https://github.com/pencil2d/pencil/issues/1356), [#1361](https://github.com/pencil2d/pencil/pull/1361)
 + The zoom control on the status bar is now interactive - [#1442](https://github.com/pencil2d/pencil/pull/1442)
 + Help text for the currently active tool has been added to the status bar - [#1442](https://github.com/pencil2d/pencil/pull/1442)
 + Added toolbars for commonly used actions - [#1468](https://github.com/pencil2d/pencil/pull/1468)
-+ Minor tweaks to the Onion skin dialog - [#1589](https://github.com/pencil2d/pencil/pull/1589)
++ Improved layout of the onion skin tool window - [#1589](https://github.com/pencil2d/pencil/pull/1589), [#1753](https://github.com/pencil2d/pencil/pull/1753)
 + The default export file path has been changed to the file path of the current project - [#1657](https://github.com/pencil2d/pencil/pull/1657)
 + Removed Vector layer from default timeline setup [#1666](https://github.com/pencil2d/pencil/pull/1666)
 
@@ -123,6 +124,9 @@ _________________________________________
 + Warn user about opening multiple instances of Pencil2D - [#1702](https://github.com/pencil2d/pencil/pull/1702)
 + Replaced the display option window with a toolbar - [#1734](https://github.com/pencil2d/pencil/pull/1734)
 + Improved error messages when importing images - [#1750](https://github.com/pencil2d/pencil/pull/1750)
++ Added an abortable progress dialog when importing animated images - [#1801](https://github.com/pencil2d/pencil/pull/1801)
++ Added support for importing animated WebP images - [#1801](https://github.com/pencil2d/pencil/pull/1801)
++ Added support for importing and exporting static WebP images - [#1801](https://github.com/pencil2d/pencil/pull/1801)
 
 
 ### Bucket tool:
@@ -142,9 +146,8 @@ _________________________________________
 
 ### Behind the curtain
 + Optimized visual updates of the timeline window - [#1737](https://github.com/pencil2d/pencil/pull/1737)
-+ Faster rendering - [#1761](https://github.com/pencil2d/pencil/pull/1761)
++ Faster rendering - [#1761](https://github.com/pencil2d/pencil/pull/1761), [#1789](https://github.com/pencil2d/pencil/pull/1789)
 + Painting performance improvements - Tiled buffer [#1776](https://github.com/pencil2d/pencil/pull/1776)
-
 + Switching tools temporarily through modifier keys or right-clicking has been reworked to be more reliable - [#1675](https://github.com/pencil2d/pencil/pull/1675)
 
 ### Bugfixes
@@ -173,11 +176,14 @@ _________________________________________
 + Fixed an issue that caused tool windows to quickly appear and disappear on startup before the main window is shown - [#1737](https://github.com/pencil2d/pencil/pull/1737)
 + Fixed an issue where the follow camera image import option used the wrong transform and resulted in general inaccuracies - [ebad47e](https://github.com/pencil2d/pencil/commit/ebad47ed4102818e4ca26b1d1a9318af654f61a5)
 + Fixed an issue where opening Unicode file paths failed when compiled against MinGW32 - [eefd148](https://github.com/pencil2d/pencil/commit/eefd14824efa3689eb2443222ee22287240bc61b)
-+ Fixed sound sometimes not exporting when range start > 1 [e9f72dc](https://github.com/pencil2d/pencil/commit/e9f72dcc468eb9887a8ed332be6d58ffbde473a4)
++ Fixed sound sometimes not exporting when range start > 1 - [e9f72dc](https://github.com/pencil2d/pencil/commit/e9f72dcc468eb9887a8ed332be6d58ffbde473a4)
 + Fixed various memory leaks
-+ Fixed hidden sound layers should be ignored in export [b315f27](https://github.com/pencil2d/pencil/commit/b315f27e2016ce779782ead4889205fe1ef6913c)
-+ Buckettool fill bugs [#1772](https://github.com/pencil2d/pencil/pull/1772)
-+ Add custom Windows tile for Windows 10 [#1787](https://github.com/pencil2d/pencil/pull/1787)
++ Fixed hidden sound layers should be ignored in export - [b315f27](https://github.com/pencil2d/pencil/commit/b315f27e2016ce779782ead4889205fe1ef6913c)
++ Buckettool fill bugs - [#1772](https://github.com/pencil2d/pencil/pull/1772)
++ Fixed an issue where importing vector layers from a project file did not preserve their original colors - [#1798](https://github.com/pencil2d/pencil/pull/1798)
++ Fixed an issue where importing vector layers from a project file caused the program to crash - [#1798](https://github.com/pencil2d/pencil/pull/1798)
++ Fixed an issue where exporting a movie did not prevent interaction with the rest of the program - [#1801](https://github.com/pencil2d/pencil/pull/1801)
++ Fixed an issue where importing an image did not account for certain types of potential errors - [#1801](https://github.com/pencil2d/pencil/pull/1801)
 
 
 ### Various
@@ -187,6 +193,7 @@ _________________________________________
 + .pclx files now include MIME type information - [#1698](https://github.com/pencil2d/pencil/pull/1698)
 + Improved robustness of project save/load logic - [#1710](https://github.com/pencil2d/pencil/pull/1710)
 + Clarified licence of certain files incorporated from the Qt Project - [#1757](https://github.com/pencil2d/pencil/pull/1757)
++ Added a custom tile for Windows versions that support them - [#1787](https://github.com/pencil2d/pencil/pull/1787)
 
 
 
