Make changelog wording more consistent and add some details
Also remove #1772 since it does not seem related to any issues present in 0.6.6

--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -112,16 +112,16 @@ _________________________________________
 ## Enhancements/Changes
 ### Interface:
 + Introduced a comprehensive new icon set - [#1356](https://github.com/pencil2d/pencil/issues/1356), [#1361](https://github.com/pencil2d/pencil/pull/1361)
-+ The zoom control on the status bar is now interactive - [#1442](https://github.com/pencil2d/pencil/pull/1442)
-+ Help text for the currently active tool has been added to the status bar - [#1442](https://github.com/pencil2d/pencil/pull/1442)
++ Replaced the zoom text on the status bar with an interactive control - [#1442](https://github.com/pencil2d/pencil/pull/1442)
++ Added help text for the currently active tool to the status bar - [#1442](https://github.com/pencil2d/pencil/pull/1442)
 + Added toolbars for commonly used actions - [#1468](https://github.com/pencil2d/pencil/pull/1468)
 + Improved layout of the onion skin tool window - [#1589](https://github.com/pencil2d/pencil/pull/1589), [#1753](https://github.com/pencil2d/pencil/pull/1753)
-+ The default export file path has been changed to the file path of the current project - [#1657](https://github.com/pencil2d/pencil/pull/1657)
-+ Removed Vector layer from default timeline setup [#1666](https://github.com/pencil2d/pencil/pull/1666)
++ Changed the default export file path to the file path of the current project - [#1657](https://github.com/pencil2d/pencil/pull/1657)
++ Removed vector layer from default timeline setup [#1666](https://github.com/pencil2d/pencil/pull/1666)
 
   Please note that vector layers can still be added manually and the default layer setup can be customized by modifying the default preset in Edit → Preferences → Files. Existing custom default presets are not affected by this change.
-+ Warn user about adding more sound clips than can be exported - [#1701](https://github.com/pencil2d/pencil/pull/1701)
-+ Warn user about opening multiple instances of Pencil2D - [#1702](https://github.com/pencil2d/pencil/pull/1702)
++ Added a warning when adding more sound clips than can be exported - [#1701](https://github.com/pencil2d/pencil/pull/1701)
++ Added a warning when opening multiple instances of Pencil2D - [#1702](https://github.com/pencil2d/pencil/pull/1702)
 + Replaced the display option window with a toolbar - [#1734](https://github.com/pencil2d/pencil/pull/1734)
 + Improved error messages when importing images - [#1750](https://github.com/pencil2d/pencil/pull/1750)
 + Added an abortable progress dialog when importing animated images - [#1801](https://github.com/pencil2d/pencil/pull/1801)
@@ -131,69 +131,68 @@ _________________________________________
 
 ### Bucket tool:
 
-+ Ability to set the fill reference layer - [#1630](https://github.com/pencil2d/pencil/pull/1630)
-+ Ability to toggle tolerance on/off - [#1630](https://github.com/pencil2d/pencil/pull/1630)
-+ Ability to expand the fill area - [#1630](https://github.com/pencil2d/pencil/pull/1630)
-+ Ability to drag to fill - [#1630](https://github.com/pencil2d/pencil/pull/1630) 
-+ **Significantly** improved fill performance [#1707](https://github.com/pencil2d/pencil/pull/1707)
-+ Ability to fill using a blend mode: Overlay/Behind/Replace - [#1590](https://github.com/pencil2d/pencil/pull/1590)
++ Added an option to set the fill reference layer - [#1630](https://github.com/pencil2d/pencil/pull/1630)
++ Added an option to toggle tolerance on/off - [#1630](https://github.com/pencil2d/pencil/pull/1630)
++ Added an option to expand the fill area - [#1630](https://github.com/pencil2d/pencil/pull/1630)
++ Added the ability to drag to fill - [#1630](https://github.com/pencil2d/pencil/pull/1630)
++ Improved fill performance *significantly* - [#1707](https://github.com/pencil2d/pencil/pull/1707)
++ Added an option to fill using a blend mode: Overlay/Behind/Replace - [#1590](https://github.com/pencil2d/pencil/pull/1590)
 
 ### Workflow improvements
-+ Vector stroke colors will now only be updated when the palette replace function is used - [#1265](https://github.com/pencil2d/pencil/pull/1265)
-+ Ability to paste content from the previous frame - [#1682](https://github.com/pencil2d/pencil/pull/1682)
-+ Ability to duplicate layer - [#1690](https://github.com/pencil2d/pencil/pull/1690), [#1744](https://github.com/pencil2d/pencil/pull/1744)
-+ Quality of life improvements to Pegbar feature - [#1580](https://github.com/pencil2d/pencil/pull/1580)
++ Aligned color palette behavior on vector and bitmap layers so that palette colors and their associated vector strokes are only updated when the replace function is used - [#1265](https://github.com/pencil2d/pencil/pull/1265)
++ Added an action to paste content from the previous frame - [#1682](https://github.com/pencil2d/pencil/pull/1682)
++ Added an action to duplicate layers - [#1690](https://github.com/pencil2d/pencil/pull/1690), [#1744](https://github.com/pencil2d/pencil/pull/1744)
++ Optimized the peg bar alignment workflow by activating the select tool, creating an initial selection and pre-selecting the first layer upon opening the dialog - [#1580](https://github.com/pencil2d/pencil/pull/1580)
 
 ### Behind the curtain
 + Optimized visual updates of the timeline window - [#1737](https://github.com/pencil2d/pencil/pull/1737)
-+ Faster rendering - [#1761](https://github.com/pencil2d/pencil/pull/1761), [#1789](https://github.com/pencil2d/pencil/pull/1789)
-+ Painting performance improvements - Tiled buffer [#1776](https://github.com/pencil2d/pencil/pull/1776)
-+ Switching tools temporarily through modifier keys or right-clicking has been reworked to be more reliable - [#1675](https://github.com/pencil2d/pencil/pull/1675)
++ Improved painting performance by re-rendering only modified areas - [#1761](https://github.com/pencil2d/pencil/pull/1761), [#1789](https://github.com/pencil2d/pencil/pull/1789)
++ Improved painting performance by introducing a tiled buffer - [#1776](https://github.com/pencil2d/pencil/pull/1776)
++ Reworked switching tools temporarily through modifier keys or right-clicking to be more reliable - [#1675](https://github.com/pencil2d/pencil/pull/1675)
 
 ### Bugfixes
 
-+ Crash when undoing after layer deletion - [#1412](https://github.com/pencil2d/pencil/issues/1412)
-+ Fixed UI rendering issue when using Direct2D on Windows - [#1575](https://github.com/pencil2d/pencil/pull/1575)
-+ Fixed canvas rendering bugs - [#1642](https://github.com/pencil2d/pencil/pull/1642) [#1581], (https://github.com/pencil2d/pencil/pull/1581), [#1580](https://github.com/pencil2d/pencil/pull/1580), [#1577](https://github.com/pencil2d/pencil/pull/1577), [#1576](https://github.com/pencil2d/pencil/issues/1576)
-+ Fixed a case where a keyframe undo would lead to a crash or double undo - [#1629](https://github.com/pencil2d/pencil/pull/1629)
-+ Fixed an issue that caused the hand tool icon to remain active after zooming with a stylus - [#1633](https://github.com/pencil2d/pencil/pull/1633)
++ Fixed an issue where undoing after deleting a layer caused the program to crash - [#1412](https://github.com/pencil2d/pencil/issues/1412)
++ Fixed an issue where certain user interface controls did not display correctly when using the Direct2D platform on Windows - [#1575](https://github.com/pencil2d/pencil/pull/1575)
++ Fixed several issues where the canvas did not immediately update after using certain actions - [#1642](https://github.com/pencil2d/pencil/pull/1642), [#1581](https://github.com/pencil2d/pencil/pull/1581), [#1580](https://github.com/pencil2d/pencil/pull/1580), [#1577](https://github.com/pencil2d/pencil/pull/1577), [#1576](https://github.com/pencil2d/pencil/issues/1576)
++ Fixed an issue where undoing the deletion of a keyframe caused the program to perform an additional undo operation or crash - [#1629](https://github.com/pencil2d/pencil/pull/1629)
++ Fixed an issue where the hand tool icon remained active after zooming with a stylus - [#1633](https://github.com/pencil2d/pencil/pull/1633)
 + Fixed an issue where transforming areas in certain imported footage would color them black - [#1642](https://github.com/pencil2d/pencil/pull/1642)
-+ Fixed an issue that caused fill operations to be performed twice when performed with a tablet - [#1667](https://github.com/pencil2d/pencil/pull/1667)
-+ Fixed an issue that caused Pencil2D to detect the system language incorrecty on systems that have secondary languages configured - [#1703](https://github.com/pencil2d/pencil/pull/1703)
-+ Fixed mouse wheel zoom misbehaviour on Linux - [#1716](https://github.com/pencil2d/pencil/pull/1716), [#1711](https://github.com/pencil2d/pencil/issues/1711)
-+ Fixed an issue that caused undo information to be recorded improperly for the first change made after navigating between frames - [#1717](https://github.com/pencil2d/pencil/pull/1717)
-+ Fixed an issue that allowed the project recovery dialog to appear behind the main window - [#1721](https://github.com/pencil2d/pencil/pull/1265)
-+ Fixed rotated selections boundaries not being properly visualised - [#1724](https://github.com/pencil2d/pencil/pull/1724)
-+ Fixed transforms being applied incorrectly to rotated selections - [#1724](https://github.com/pencil2d/pencil/pull/1724)
++ Fixed an issue where fill operations were performed twice when performed with a tablet - [#1667](https://github.com/pencil2d/pencil/pull/1667)
++ Fixed an issue where the system language was detected incorrecty on systems that have secondary languages configured - [#1703](https://github.com/pencil2d/pencil/pull/1703)
++ Fixed an issue where mouse wheel zoom misbehaved on some systems using the X Window System - [#1716](https://github.com/pencil2d/pencil/pull/1716), [#1711](https://github.com/pencil2d/pencil/issues/1711)
++ Fixed an issue where undo information was recorded improperly for the first change made after navigating between frames - [#1717](https://github.com/pencil2d/pencil/pull/1717)
++ Fixed an issue where the project recovery dialog appeared behind the main window on some systems - [#1721](https://github.com/pencil2d/pencil/pull/1721)
++ Fixed an issue where rotated selections boundaries were not visualised properly - [#1724](https://github.com/pencil2d/pencil/pull/1724)
++ Fixed an issue where transforms were applied incorrectly to rotated selections - [#1724](https://github.com/pencil2d/pencil/pull/1724)
 + Fixed an issue where the undo and redo shortcuts were erroneously disabled under certain circumstances - [#1721](https://github.com/pencil2d/pencil/pull/1721)
 + Fixed an issue where deleting a sound layer on Windows would under certain circumstances lead to a crash - [#1731](https://github.com/pencil2d/pencil/pull/1731)
-+ Fixed truncated playback of certain sound clips on Windows - [#1733](https://github.com/pencil2d/pencil/pull/1733), [#1756](https://github.com/pencil2d/pencil/pull/1756)
++ Fixed an issue where playback of certain sound clips was truncated on Windows - [#1733](https://github.com/pencil2d/pencil/pull/1733), [#1756](https://github.com/pencil2d/pencil/pull/1756)
 
   Please note that in order to benefit from this bug fix in existing projects, it is necessary to re-import affected sound clips.
 + Fixed an issue where the use of valid file name extensions was not properly enforced in file save dialogs - [#1736](https://github.com/pencil2d/pencil/pull/1736)
-+ Fixed several issues in the way the timeline is drawn - [#1737](https://github.com/pencil2d/pencil/pull/1737)
-+ Fixed an issue where dragging the timeline with the middle mouse button could change the frame selection - [#1737](https://github.com/pencil2d/pencil/pull/1737)
-+ Fixed an issue that caused tool windows to quickly appear and disappear on startup before the main window is shown - [#1737](https://github.com/pencil2d/pencil/pull/1737)
++ Fixed several issues where the timeline was drawn incorrectly - [#1737](https://github.com/pencil2d/pencil/pull/1737)
++ Fixed an issue where dragging the timeline with the middle mouse button could alter the frame selection - [#1737](https://github.com/pencil2d/pencil/pull/1737)
++ Fixed an issue where tool windows briefly appeared and disappeared on startup before the main window was shown - [#1737](https://github.com/pencil2d/pencil/pull/1737)
 + Fixed an issue where the follow camera image import option used the wrong transform and resulted in general inaccuracies - [ebad47e](https://github.com/pencil2d/pencil/commit/ebad47ed4102818e4ca26b1d1a9318af654f61a5)
-+ Fixed an issue where opening Unicode file paths failed when compiled against MinGW32 - [eefd148](https://github.com/pencil2d/pencil/commit/eefd14824efa3689eb2443222ee22287240bc61b)
-+ Fixed sound sometimes not exporting when range start > 1 - [e9f72dc](https://github.com/pencil2d/pencil/commit/e9f72dcc468eb9887a8ed332be6d58ffbde473a4)
-+ Fixed various memory leaks
-+ Fixed hidden sound layers should be ignored in export - [b315f27](https://github.com/pencil2d/pencil/commit/b315f27e2016ce779782ead4889205fe1ef6913c)
-+ Buckettool fill bugs - [#1772](https://github.com/pencil2d/pencil/pull/1772)
++ Fixed an issue where opening Unicode file paths failed when the program was compiled against MinGW32 - [eefd148](https://github.com/pencil2d/pencil/commit/eefd14824efa3689eb2443222ee22287240bc61b)
++ Fixed an issue where the movie exporter sometimes failed to export sounds when exporting a range that does not start at the first frame - [e9f72dc](https://github.com/pencil2d/pencil/commit/e9f72dcc468eb9887a8ed332be6d58ffbde473a4)
++ Fixed an issue where the movie exporter erroneously included hidden sound layers - [b315f27](https://github.com/pencil2d/pencil/commit/b315f27e2016ce779782ead4889205fe1ef6913c)
 + Fixed an issue where importing vector layers from a project file did not preserve their original colors - [#1798](https://github.com/pencil2d/pencil/pull/1798)
 + Fixed an issue where importing vector layers from a project file caused the program to crash - [#1798](https://github.com/pencil2d/pencil/pull/1798)
 + Fixed an issue where exporting a movie did not prevent interaction with the rest of the program - [#1801](https://github.com/pencil2d/pencil/pull/1801)
 + Fixed an issue where importing an image did not account for certain types of potential errors - [#1801](https://github.com/pencil2d/pencil/pull/1801)
++ Fixed various memory leaks
 
 
 ### Various
-+ AppImages now require Ubuntu 16.04 "Xenial Xerus" or newer distributions - [#1635](https://github.com/pencil2d/pencil/pull/1635)
-+ AppImages now support Wayland - [#1663](https://github.com/pencil2d/pencil/pull/1663)
-+ AppImages now include update information - [#1680](https://github.com/pencil2d/pencil/pull/1680)
-+ .pclx files now include MIME type information - [#1698](https://github.com/pencil2d/pencil/pull/1698)
++ Raised minimum system requirements of our AppImages to Ubuntu 16.04 "Xenial Xerus" or newer distributions - [#1635](https://github.com/pencil2d/pencil/pull/1635)
++ Added support for Wayland to our AppImages - [#1663](https://github.com/pencil2d/pencil/pull/1663)
++ Added update information to our AppImages - [#1680](https://github.com/pencil2d/pencil/pull/1680)
++ Added MIME type information to .pclx files - [#1698](https://github.com/pencil2d/pencil/pull/1698)
 + Improved robustness of project save/load logic - [#1710](https://github.com/pencil2d/pencil/pull/1710)
 + Clarified licence of certain files incorporated from the Qt Project - [#1757](https://github.com/pencil2d/pencil/pull/1757)
-+ Added a custom tile for Windows versions that support them - [#1787](https://github.com/pencil2d/pencil/pull/1787)
++ Added a custom start menu tile for Windows versions that support them - [#1787](https://github.com/pencil2d/pencil/pull/1787)
 
 
 
