Update changelog with recent PRs

--- a/_posts/2023-07-05-pencil2d-0.6.7-release.md
+++ b/_posts/2023-07-05-pencil2d-0.6.7-release.md
@@ -37,8 +37,10 @@ Many thanks to all the people who helped to make this release possible.
 [v404]: https://github.com/v404
 [donarturo11]: https://github.com/donarturo11
 [anpanring]: https://github.com/anpanring
+[musicinmybrain]: https://github.com/musicinmybrain
+[CSinclair89]: https://github.com/CSinclair89
 
-[Chchwy] - [Scribblemaniac] - [MrStevns] - [Davidlamhauge] - [Josemoreno] - [J5lx] - [iynaur] - [aeroc7] - [v404] - [donarturo11] - [anpanring]
+[Chchwy] - [Scribblemaniac] - [MrStevns] - [Davidlamhauge] - [Josemoreno] - [J5lx] - [iynaur] - [aeroc7] - [v404] - [donarturo11] - [anpanring] - [musicinmybrain] - [CSinclair89]
 
 _______________________________________________
 ## Feature highlights
@@ -108,6 +110,10 @@ In addition to that every transform will also now be undo'able.
 
 Add gif or video of feature
 
+### Windows Installer [#848](https://github.com/pencil2d/pencil/pull/848)
+
+Add some words about the feature
+
 _________________________________________
 ## Enhancements/Changes
 ### Interface:
@@ -127,6 +133,12 @@ _________________________________________
 + Added an abortable progress dialog when importing animated images - [#1801](https://github.com/pencil2d/pencil/pull/1801)
 + Added support for importing animated WebP images - [#1801](https://github.com/pencil2d/pencil/pull/1801)
 + Added support for importing and exporting static WebP images - [#1801](https://github.com/pencil2d/pencil/pull/1801)
++ Improved usability and reliability of quick sizing - [#1806](https://github.com/pencil2d/pencil/pull/1806)
++ Added an option to configure keyboard shortcuts to flip the current selection - [#1816](https://github.com/pencil2d/pencil/pull/1816)
++ Improved zoom behavior for devices that report pixel-based scrolling data - [06a4495](https://github.com/pencil2d/pencil/commit/06a44959bd93c8b9dc3d2c1cb803577e29391a9f)
++ Added translations for Bulgarian, Persian, Korean, Norwegian Bokmål, Dutch (Netherlands) and Cantonese - [#1826](https://github.com/pencil2d/pencil/pull/1826)
++ Changed the warning dialog when switching the application language to display in the new language instead of the current one - [#1836](https://github.com/pencil2d/pencil/pull/1836)
++ Improved the movie export dialog to prevent exporting MP4 files in an invalid resolution - [#1833](https://github.com/pencil2d/pencil/pull/1833)
 
 
 ### Bucket tool:
@@ -137,6 +149,7 @@ _________________________________________
 + Added the ability to drag to fill - [#1630](https://github.com/pencil2d/pencil/pull/1630)
 + Improved fill performance *significantly* - [#1707](https://github.com/pencil2d/pencil/pull/1707)
 + Added an option to fill using a blend mode: Overlay/Behind/Replace - [#1590](https://github.com/pencil2d/pencil/pull/1590)
++ Removed nonsensical quick sizing support - [#1806](https://github.com/pencil2d/pencil/pull/1806)
 
 ### Workflow improvements
 + Aligned color palette behavior on vector and bitmap layers so that palette colors and their associated vector strokes are only updated when the replace function is used - [#1265](https://github.com/pencil2d/pencil/pull/1265)
@@ -182,6 +195,8 @@ _________________________________________
 + Fixed an issue where importing vector layers from a project file caused the program to crash - [#1798](https://github.com/pencil2d/pencil/pull/1798)
 + Fixed an issue where exporting a movie did not prevent interaction with the rest of the program - [#1801](https://github.com/pencil2d/pencil/pull/1801)
 + Fixed an issue where importing an image did not account for certain types of potential errors - [#1801](https://github.com/pencil2d/pencil/pull/1801)
++ Fixed an issue where trying to import an image onto a hidden layer caused the program to crash if a keyframe did not already exist on the target frame - [#1820](https://github.com/pencil2d/pencil/pull/1820)
++ Fixed an issue where trying to import an image onto a hidden layer did not produce an error if a keyframe already existed on the target frame - [#1820](https://github.com/pencil2d/pencil/pull/1820)
 + Fixed various memory leaks
 
 
@@ -193,6 +208,7 @@ _________________________________________
 + Improved robustness of project save/load logic - [#1710](https://github.com/pencil2d/pencil/pull/1710)
 + Clarified licence of certain files incorporated from the Qt Project - [#1757](https://github.com/pencil2d/pencil/pull/1757)
 + Added a custom start menu tile for Windows versions that support them - [#1787](https://github.com/pencil2d/pencil/pull/1787)
++ Added macOS builds for Apple Silicon - [#1835](https://github.com/pencil2d/pencil/pull/1835)
 
 
 
